Ruby Shell v1.28 is here! Development mode is complete, and it works, a new easter egg, command line arguments ~~not finished~~ and more!

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
 prompt: 'λ '
-message: 'Welcome to Ruby Shell v1.27!'
+message: 'Welcome to Ruby Shell v1.28!'
 ascii: 'logo.txt'
+# joe biden!!!!!!!!
