--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-first_time: false
-  prompt: '~$ '
-  message: 'Welcome to rsh, v1.39. Enter “help” for help.'
-  ascii: 'logo.txt' =
+first_time: true
+prompt: '~$ '
+message: 'Welcome to rsh, v1.39. Enter “help” for help.'
+ascii: 'logo.txt' 
