--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
-first_boot: true
+
+first_time: false
 prompt: '~$ '
 message: 'Welcome to rsh, v1.39. Enter “help” for help.'
-ascii: 'logo.txt' 
+ascii: 'logo.txt'
