--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,5 @@
 first_boot: true
 prompt: '~$ '
 message: 'Welcome to rsh, v1.39. Enter “help” for help.'
+# Hey there! If you want to know how to change your ASCII art logo on startup, just simply replace the logo in logo.txt with your ASCII art! Got it?
 ascii: 'logo.txt'
